--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,11 @@ img {
 /*----------------------------헤더 부분--------------------*/
 .header{background: #fff; border-bottom: 1px solid #ccc;}    
 
-    .header .header-box{overflow: hidden; padding: 10px 10px;}
-
+    .header .header-box{overflow: hidden; padding: 10px 10px; margin-bottom: 10px;}
+    
     .header h1{float: left; }
     .header h1 a{display: block; padding: 10px; }
     .header h1 a img{max-height: 40px; max-width: 150px;}
-    
     .header .gnb{width: 700px; margin: 8px auto 0;}
     .header .gnb > ul{overflow: hidden; margin-top: 10px;}
     .header .gnb > ul > li{float: left; margin: 0px 30px;}
@@ -53,20 +52,27 @@ img {
     .header .tnb > ul > li{float: left;}
     .header .tnb > ul > li > a{display: block; padding: 10px; font-weight: 500;}
 
+    .header.autofix_sb {
+        position: fixed;
+        width: 100%;
+        z-index: 9999;
+    }
+    
+
 /*-----------------------메인 비쥬얼------------------------------*/
-    .contents .main-visual{text-align: center; background-image: url('../img/main.png'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 900px; overflow: hidden;}
+    .contents .main-visual{text-align: center; background-image: url('../img/main.png'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 1100px; overflow: hidden;}
     .contents .main-visual h2{font-size: 45px; color: #fff; padding-top: 400px; padding-bottom: 30px;}
     .contents .main-visual > p{font-size: 20px; color: #fff;}
 
 
 /*------------------------메인 숫자--------------------------------*/
 
-.numbers-wrap{margin-top: 30px;}
-.numbers{text-align: center; margin-bottom: 120px;}
-.numbers h2{font-size: 60px; margin-bottom: 60px;  padding-top: 60px; font-weight: 600; color: #505050;}
-.numbers p{font-size: 25px; color: #747474;}
+.numbers-wrap{margin-top: 100px; margin-bottom: 100px;}
+.numbers{text-align: center; margin-bottom: 60px;}
+.numbers h2{font-size: 45px; margin-bottom: 30px;  padding-top: 60px; font-weight: 600; color: #505050;}
+.numbers p{font-size: 20px; color: #747474;}
 
-.num-data ul li{display: inline-block; text-align: center; margin-top: 120px; margin-bottom: 120px;}
+.num-data ul li{display: inline-block; text-align: center; margin-top: 120px; margin-bottom: 60px;}
 .num-data ul li:nth-child(1){width: 33%;}
 .num-data ul li:nth-child(2){width: 33%;}
 .num-data ul li:nth-child(3){width: 33%;}
@@ -75,9 +81,239 @@ img {
  
 
 /*---------------------------메인 배너---------------------------*/
-.banner{background-color: white;}
-.swiper-container{text-align: center; min-height: 670px; max-height: 670px; overflow: hidden;}
-.swiper-container .swiper-slide{margin-top: 60px;}
+.banner{background-color: #fff; padding: 200px 0px;}
+.swiper-container{text-align: center; overflow: hidden;}
+.swiper-container .swiper-wrapper .swiper-slide img{overflow: hidden; max-height: 600px;}
+
+
+/*---------------------------갤러리---------------------------*/
+.main-gallery-wrap{padding: 100px 0px; text-align: center;}
+.main-gallery-wrap .m-g-b{max-width: 1200px; margin: 0 auto;}
+.main-gallery-wrap h2{font-size: 45px; margin-bottom: 80px;}
+.main-gallery li{display: inline-block; width: 33%; overflow: hidden; padding: 10px 30px; background: #fff; max-height: 700px;}
+.main-gallery li .thum a img{max-height: 500px; min-height: 500px;}
+.main-gallery li:hover > div .info span{width: 120px; border-radius: 15px; border: 1px solid #999999ce; max-height: 100px;}
+.main-gallery li > div > .info{text-align: center;}
+.main-gallery li > div > .info h3{margin-top: 20px; font-size: 20px;}
+.main-gallery li > div > .info p{color: #888; margin: 5px 0; line-height: 50px; height: 50px; font-size: 15px;}
+.main-gallery li > div > .info span{display: inline-block; width: 30px; height: 30px; border: 1px solid #999999ce; border-radius: 50%; line-height: 28px; transition: all 0.5s; overflow: hidden;}
+
+.main-gallery li:hover > div .info span u{display: inline-block;}
+.main-gallery li > div .info span u{display: none;}
 
 
 
+
+/*---------------------------풋터---------------------------*/
+.footer{ background: white; padding: 20px 0px;}
+.footer > div{}
+.footer > div > div{display: inline-block;}
+.footer > div > div.f-logo h1 a img{max-width: 150px; height: 40px; margin-left: 20px;}
+.footer > div > div.f-logo h1 a span{margin-left: 20px;}
+.footer > div > div.f-copy{margin-left: 30px;}
+
+
+/*-----------------------작업물 게시판------------------------*/
+
+            .snb-wrap{text-align: center; margin: 20px 0; }
+            .snb-wrap > div{max-width: 1200px; margin: 0 auto; background: #fff;}
+            .snb-wrap ul{display: table; width: 100%;}
+            .snb-wrap li{display: table-cell; width: 33.33%;}
+            .snb-wrap li > a{display: block; padding: 20px; font-size: 14px; border-right: 1px solid #e1e1e1;}
+
+            .snb-wrap li:hover span::before{width: 100%; left: 0;}
+            .snb-wrap li:hover span:after{opacity: 1;}
+
+            .snb-wrap li.on span:before{width: 100%; left:0;}
+            .snb-wrap li.on span:after{opacity: 1;}
+
+            .snb-wrap li.on a{font-weight:600}
+
+            .snb-wrap li > a span{display: block; position: relative;}
+            .snb-wrap li > a span:before{
+            content:"";
+            width: 0;
+            height: 3px;
+            background: #000;
+            position:absolute;
+            left:0;
+            bottom:-10px;
+            transition:all 0.3s;
+            }
+
+            .snb-wrap li > a span:after{
+            opacity: 0;
+            content:"";
+            width:0;
+            height: 0;
+            border-top:0 solid transparent;
+            border-bottom: 5px solid #000;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            position:absolute;
+            left:50%;
+            transform:translateX(-50%);
+            bottom:-7px;
+            }
+            .notice-wrap{text-align: center; padding-bottom: 10px;}
+            .notice-wrap .notice-box{max-width: 1200px; margin: 0 auto;}
+            .notice-wrap li{display: table; width: 100%;}
+            .notice-wrap li:nth-child(5){height: 70px; padding-top: 30px;}
+            .notice-wrap li:nth-child(1) > div{display: table-cell; border-top: 2px solid #000; font-size: 20px; font-weight: 500; padding: 5px 0; background: #fff;}
+    
+            .notice-wrap li > div{display: table-cell; width: 25%; border: 1px solid #e1e1e1; font-size: 15px; padding: 3px 0; background: #fff;}
+            .notice-wrap li div:nth-child(1){width: 10%;}
+            .notice-wrap li div:nth-child(2){width: 50%;}
+            .notice-wrap li div:nth-child(3){width: 10%;}
+            .notice-wrap li div:nth-child(4){width: 30%;}
+            
+            .notice-wrap li > span{}
+            .notice-wrap li > span a{padding: 5px 10px; display: inline-block; margin: 0 3px; background: #fff; border: 1px solid #e1e1e1;}
+    
+            .notice-wrap li span a.on{background: #000; color: #fff;}
+    
+            .notice-wrap li.write div{background: #000; width: 60px; float: right;}
+            .notice-wrap li.write div a{color: #fff; font-weight: 300;}
+            
+/*-----------------------작업물 게시판 글쓰기------------------------*/
+
+        .work-space-write-box{height: 500px; max-width: 1200px; margin: 0px auto;}
+        .work-space-write-box div{margin: 60px 0px; width: 100%;}
+
+        .work-space-write-box div h1{display: inline-block; margin: 0px 30px; width:10% ;}
+        
+        .work-space-write-box div.sub input{display: inline-block; width:30% ; height: 40px;}
+        .work-space-write-box div.dis textarea{display: inline-block; width: 50%; height: 80px;}
+        .work-space-write-box div.ctg input{margin: auto 10px;}
+        .work-space-write-box div.img input{font-size: 15px;}
+        .work-space-write-box div.file input{font-size: 15px;}
+
+        .btn-box{height: 50px; max-width: 1200px; margin: 0px auto; text-align: right;}
+        .btn-box span a{font-size: 15px; margin-right: 10px; background: #000; color: #fff; padding: 5px 10px;}
+
+
+
+/*-----------------------작업물 게시판 글 보기------------------------*/
+        .view-box{width: 1200px; margin: 0 auto; text-align: center; background: #fff;}
+        .view-box .tit{text-align: center; margin: 30px 0; padding-top: 30px;}
+        .view-box .tit h1{ font-size: 30px;}
+        .view-box .img img{height: 400px; border: 1px solid #e1e1e1;}
+        .view-box .file{margin: 40px 0;}
+        .view-box .dis{padding-bottom: 40px; text-align: center; }
+        .view-box .dis p{font-size: 15px; width: 80%; margin: 0 auto; }
+
+
+
+
+ /*-----------------------Code for Song------------------------*/
+    .code-for-song-title {text-align: center; padding: 40px 0px; background: #fff; border-bottom:1px solid #e1e1e1;}
+    .code-for-song-title > div > h1{margin-bottom: 50px; font-size: 40px;}
+    .code-for-song-title div > h3{font-size: 15px;}
+
+    .code-for-song-wrap{width: 1200px; margin: 30px auto; }
+    .code-for-song-wrap .code-for-song-box .code-for-song-contents {width: 100%;}
+    .code-for-song-wrap .code-for-song-box .code-for-song-contents ul li{display: inline-block; width: 30%; text-align: center; background: #fff; border: 1px solid #e1e1e1; margin: 10px 10px; vertical-align: top;}
+    .code-for-song-wrap .code-for-song-box .code-for-song-contents ul li img{}
+    .code-for-song-wrap .code-for-song-box .code-for-song-contents ul li h2{font-size: 19px; margin-top: 40px;}
+    .code-for-song-wrap .code-for-song-box .code-for-song-contents ul li h5{font-size: 15px; margin: 40px 0px;}
+
+    .code-for-song-box .under-nab{text-align: center;}
+    .code-for-song-box .under-nab span{margin: 10px;}
+    .code-for-song-box .under-nab .write{text-align: right;}
+
+
+    .code-for-song-box .under-nab {margin: 20px 0px;}
+    .code-for-song-box .under-nab span a{padding: 5px 10px; display: inline-block; margin: 0 3px; background: #fff; border: 1px solid #e1e1e1;}
+
+    .code-for-song-box .under-nab span a.on{background: #000; color: #fff;}
+
+    .code-for-song-box .under-nab div{background: #000; width: 60px; float: right; padding: 5px;}
+    .code-for-song-box .under-nab div a{color: #fff; font-weight: 300; font-size: 17px;}
+    
+
+
+/*-----------------------Code for Song View------------------------*/
+    .contents-box{width: 1200px; margin: 0 auto; text-align: center; background: #fff;}
+
+    .contents-box .title{margin: 40px 0;}
+    .contents-box .title h1{font-size: 20px; margin: 30px 0;}
+    .contents-box .title p{font-size: 18px;}
+
+    .contents-box .code-img{margin-top: 50px; background: #fff;}
+    .contents-box .code-img ul{width: 100%;}
+    .contents-box .code-img ul li{display: inline-block; width: 33%;}
+
+    .contents-box .info{margin: 50px 0px;}
+    .contents-box .info p{font-size: 20px;}
+
+
+/*----------------------버스킹 장소 예약하기-------------------------------------------*/
+.title{text-align: center; margin: 30px 0;}
+.title h1{font-size: 30px;}
+
+.booking-wrap{width: 1200px; margin: 0 auto;}
+
+.booking-wrap ul li{padding: 10px;}
+.booking-wrap ul li .booking-box{overflow: hidden; border: 1px solid #ccc; background: #fff;}
+
+.booking-wrap ul li .booking-box > div{display: inline-block; padding: 20px;}
+.booking-wrap ul li .booking-box > div.thum{width: 29%;}
+.booking-wrap ul li .booking-box > div.info{width: 70%;}
+
+.booking-wrap ul li .booking-box > div.info h3{font-size: 25px; margin-bottom: 10px;}
+.booking-wrap ul li .booking-box > div.info p{font-size: 15px; color: #666; padding: 10px 0;}
+.booking-wrap ul li .booking-box > div.info i{font-size: 15px;  color: #999;}
+
+
+
+
+/*----------------------버스킹 장소 예약하기-------------------------------------------*/
+                
+.booking-box{margin: 0 auto; text-align: center;}
+.booking-box h2{margin: 40px 0;}
+
+.calendar-box{width: 1200px; margin: 20px auto; }
+
+.cal-hd{margin: 40px 0;}
+.cal-hd a{display: inline-block; padding: 5px;}
+.cal-hd h1{display: inline-block; margin: 0 30px;}
+.cal-bd{border: 1px solid rgb(163, 163, 163);}
+.cal-bd ul{overflow: hidden;}
+.cal-bd ul li{float: left; width: 14.28%; text-align: center;}
+.cal-bd ul li a{display: block; padding: 10px;}
+
+.cal-bd > ul li:nth-child(1) a{color: blue;}
+.cal-bd > ul li:nth-child(7) a{color: red;}
+
+.cal-bd ul li a span{width: 30px; height: 30px; display: block; line-height: 30px; margin: 0 auto;}
+.cal-bd ul li.off a{color: #ccc;}
+.cal-bd ul li.today a span{background: #000; color: #fff;}
+.cal-bd ul li.selected a span{background: rgb(252, 166, 166);}
+.cal-bd ul li a span:hover{background: rgb(237, 255, 77);}
+
+
+.booking-box .btn {margin: 20px;}
+.booking-box .btn a{padding: 10px; background: #000; color: #fff;}
+
+
+/*----------------------버스킹 장소 확인하기-------------------------------------------*/
+.check-wrap{text-align: center; padding-bottom: 10px;}
+.check-wrap .check-box{max-width: 1200px; margin: 0 auto;}
+.check-wrap li{display: table; width: 100%;}
+.check-wrap li:nth-child(5){height: 70px; padding-top: 30px;}
+.check-wrap li:nth-child(1) > div{display: table-cell; border-top: 2px solid #000; font-size: 20px; font-weight: 500; padding: 5px 0; background: #fff;}
+
+.check-wrap li > div{display: table-cell; width: 25%; border: 1px solid #e1e1e1; font-size: 15px; padding: 3px 0; background: #fff;}
+.check-wrap li div:nth-child(1){width: 10%;}
+.check-wrap li div:nth-child(2){width: 50%;}
+.check-wrap li div:nth-child(3){width: 10%;}
+.check-wrap li div:nth-child(4){width: 30%;}
+
+.check-wrap li div.back{color: red;}
+.check-wrap li div.ok{color: green;}
+.check-wrap li > span a{padding: 5px 10px; display: inline-block; margin: 0 3px; background: #fff; border: 1px solid #e1e1e1;}
+
+.check-wrap li span a.on{background: #000; color: #fff;}
+
+.check-wrap li.write div{background: #000; width: 60px; float: right;}
+.check-wrap li.write div a{color: #fff; font-weight: 300;}
