--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ img {
         .view-box .tit h1{ font-size: 30px;}
         .view-box .img img{height: 400px; border: 1px solid #e1e1e1;}
         .view-box .file{margin: 40px 0;}
-        .view-box .dis{padding-bottom: 40px; text-align: center; }
+        .view-box .dis{padding-bottom: 40px;}
         .view-box .dis p{font-size: 15px; width: 80%; margin: 0 auto; }
 
 
@@ -317,3 +317,36 @@ img {
 
 .check-wrap li.write div{background: #000; width: 60px; float: right;}
 .check-wrap li.write div a{color: #fff; font-weight: 300;}
+
+
+
+/*----------------------로그인-------------------------------------------*/
+.login-box{margin: 100px 0;}
+.login-box h1{text-align: center; margin-bottom: 20px;}	
+.login-box .login{max-width:400px; margin:0 auto; border: 1px solid #e1e1e1; border-radius:25px; padding: 20px; background: #fff; box-shadow:0px 2px 5px 0px rgb(0 0 0 / 20%);}
+.login-box .login li{margin: 5px;}
+.login-box .login li input{width: 100%; height: 40px; padding: 5px; border: 1px solid #ccc; border-radius:25px;}
+.login-box .login li button{width: 100%; height: 40px; background: #26649e; color: #fff; border: 0; border-radius:25px; transition:all 0.3s;}
+.login-box .login li button:hover{background: #000; border-radius:0;}
+.login-box .login-btn{text-align: center; margin-top:20px;}
+
+
+
+
+/*----------------------회원가입-------------------------------------------*/
+.join-box {padding: 100px;}
+.join-box h1{text-align: center; margin-bottom: 20px;}
+.join-box .join-form label{display: block;}
+.join-box .join-form{max-width:400px; margin:0 auto; background: #fff; border: 1px solid #ccc; border-radius:25px; padding:20px;}
+.join-box .join-form input[type="text"]{width:100%; height:40px; border: 1px solid #ccc; padding:5px;}
+.join-box .join-form input[type="password"]{width:100%; height:40px; border: 1px solid #ccc; padding:5px;}
+.join-box .join-form select{width:100%; height:40px; border: 1px solid #ccc; padding:5px;}
+.join-box .join-form ul li{margin-bottom: 10px;}
+.join-box .join-form ul li label{font-size:12px; color: #000; margin-bottom: 3px;}
+.join-box .join-form ul li.gender span{display: inline-block;}
+.join-box .join-form ul li.gender span label{display: inline-block;}
+.join-box .join-form ul li.add span.zipcode input{width: 100px;}
+.join-box .join-form ul li.add span.zipcode button{width: 100px; height: 40px; background: #000; color: #fff; border: 0;}
+.join-box .join-form ul li.add span{margin-bottom: 5px; display: block;}
+.join-box .join-btn{text-align: center;}
+.join-box .join-btn a{display: inline-block; background: #000; color: #fff; margin: 5px; padding:10px 0px; width:100px;}
